--- a/style.css
+++ b/style.css
@@ -97,22 +97,23 @@ body {
 }
 
 .jar-glossy-long {
-    position: absolute;
+    position: relative;
     border-radius: 10px;
     background-color: #ffffff;
     width: 1%;
     height: 10%;
-    top:90%;
-    left:33%;
     z-index: 10;
+    bottom: 35%;
+    right: 25%;
+
 }
 .jar-glossy-short {
-    position: absolute;
+    position: relative;
     background-color: #ffffff;
     width: 1%;
     border-radius: 10px;
     height: 3%;
-    top:82%;
-    left:33%;
+    right: 25%;
     z-index: 10;
+    bottom: 50%;
 }
